# python-project-50

./: Makefile  README.md  demo.cast  pyproject.toml
gendiff/: cli.py  generate_diff.py
gendiff/formatter/: formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: file_reader.py  gendiff.py
gendiff/tests/: gendiff_test.py
gendiff/tests/fixtures/: expected_json.txt
